--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -1,4 +1,4 @@
-% !TEX root = thesis.tex
+competes ains]% !TEX root = thesis.tex
 
 \chapter{A recurring pattern}\label{ch:recurring}
 
@@ -13,7 +13,7 @@ Then I show that this pattern is not unique to headless relatives. It appears in
 
 As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. In this section I first discuss examples in which the internal case and the external case match, and then examples in which they differ.
 
-If the internal case and the external case are the same case, the relative pronoun simply surfaces in that case. I illustrate this with examples from headless relatives in Gothic. The cases I discuss are nominative, accusative and dative.
+If the internal case and the external case are one and the same case, the relative pronoun simply surfaces in that case. I illustrate this with examples from headless relatives in Gothic. The cases I discuss are nominative, accusative and dative.
 
 The description of Gothic is mostly based on \citep{harbert1978}. The spelling of the examples follows the Wulfila Project website.\footnote{
 <http://www.wulfila.be>
@@ -46,9 +46,7 @@ The relative pronoun \tit{þaim)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in 
 {is not} 1\ac{sg}.\ac{poss}.\ac{nom} to give.\ac{inf}\scsub{[dat]} {except for} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} prepare.\ac{ptcp} be.\ac{pret}.3\ac{sg}\scsub{[dat]}\\
 `it is not mine to give except for to the one, for whom it was prepared'\flushfill{Gothic, \ac{mark} 10:49, after \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-dat}
 
-These findings can be summarized as in Table \ref{tbl:summary-gothic-matching}. The left column shows the internal case (\ac{int}) between square brackets. The upper row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun.
-
-The diagonal from the top left to the bottom right corresponds to the examples given so far in which the internal and external case match. The nominative marked in light gray corresponds to \ref{ex:gothic-nom-nom}, in which the internal nominative case competes with the external nominative case, and the relative pronoun surfaces in the nominative case. The accusative marked in dark gray corresponds to \ref{ex:gothic-acc-acc}, in which the internal accusative case competes with the external accusative case, and the relative pronoun surfaces in the accusative case. The unmarked dative corresponds to \ref{ex:gothic-dat-dat}, in which the internal dative case competes with the external dative case, and the relative pronoun surfaces in the dative case.
+These findings can be summarized as in Table \ref{tbl:summary-gothic-matching}. The left column shows the internal case (\ac{int}) between square brackets. The upper row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The nominative marked in light gray corresponds to \ref{ex:gothic-nom-nom}, in which the internal nominative case competes ains] the external nominative case, and the relative pronoun surfaces in the nominative case. The accusative marked in dark gray corresponds to \ref{ex:gothic-acc-acc}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case. The unmarked dative corresponds to \ref{ex:gothic-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
 
 \begin{table}[H]
  \center
@@ -81,15 +79,15 @@ The diagonal from the top left to the bottom right corresponds to the examples g
 \end{table}
 
 In Table \ref{tbl:summary-gothic-matching}, six cells remain empty. These are the cases in which the internal and the external case differ.
-It has been argued in the literature that the two competing cases always adhere a to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019,bergsma2019}. This is the scale I gave in the introduction, repeated here in \ref{ex:case-scale}. Elements more to the right on this scale win over elements more to the left on this scale.\footnote{
-In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I do not discuss the genitive. The reason is that I restrict myself to cases that appear in all possible case competition combinations. As the genitive does not fulfill that requirement, it is therefore excluded. In Chapter \ref{ch:discussion} I briefly return to the issue.
+It has been argued in the literature that the two competing cases always adhere a to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019,bergsma2019}. This is the scale I gave in the introduction of this chapter, repeated here in \ref{ex:case-scale}. Elements more to the right on this scale win over elements more to the left on this scale.\footnote{
+In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I do not discuss the genitive. The reason is that I restrict myself to cases that appear in all possible case competition combinations. As the genitive does not fulfill that requirement, it is therefore excluded. I discussed the genitive briefly in Section \ref{sec:genitive}.
 }
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale}
 
 This can be reformulated as follows. In a competition, accusative wins over nominative, dative wins over nominative, and dative wins over accusative. In this section I illustrate this scale with examples. When two differing cases compete, the relative pronoun always appears in the case more to the right on the case scale. It does not matter whether it is the internal or the external case.
 
-I start with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in the accusative case and never in nominative.
+I start with the competition between the accusative and the nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in the accusative case and never in the nominative.
 
 Consider the example in \ref{ex:gothic-nom-acc-rep}, repeated from the introduction. In this example, the internal accusative case competes against the external nominative case.
 The internal case is accusative, as the predicate \tit{frijon} `to love' takes accusative objects.
@@ -111,7 +109,7 @@ Examples in which the internal case is nominative, the external case is accusati
  and \ac{rel}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea 2.\ac{pl}.\ac{nom} read.\scsub{[acc]}\\
  `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-acc-nom-rep}
 
-The two examples in which nominative and accusative compete are showed in Table \ref{tbl:summary-gothic-nom-acc}. Within the newly filled out cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in (light or dark) gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
+The two examples in which the nominative and the accusative compete are showed in Table \ref{tbl:summary-gothic-nom-acc}. Within the newly filled out cells, two cases are given. The case in the bottom-left corner stands for the relative pronoun in the internal case. The case in the top-right corner stands for the relative pronoun in the external case. The grammatical examples are marked in light and dark gray. The unattested examples are preceded by an asterix and are unmarked.\footnote{
 Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For non-extinct languages it means that the examples are ungrammatical.
 }
 
@@ -122,7 +120,7 @@ The light gray marking corresponds to \ref{ex:gothic-nom-acc-rep}, in which the 
  \caption{Gothic headless relatives (\ac{nom} --- \ac{acc})}
  \begin{tabular}{c|c|c|c}
    \toprule
-     \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
+     \diagbox[linecolor=white]{\phantom{xxx}}{\phantom{xxx}}
          & [\ac{nom}]
          & [\ac{acc}]
          & [\ac{dat}]
@@ -147,7 +145,7 @@ The light gray marking corresponds to \ref{ex:gothic-nom-acc-rep}, in which the 
    \label{tbl:summary-gothic-nom-acc}
 \end{table}
 
-I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in the dative case and never in nominative.
+I continue with the competition between the dative and the nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in the dative case and never in the nominative.
 
 Consider the example in \ref{ex:gothic-nom-dat}, in which the internal dative case competes against the external nominative case.
 The internal case is dative, as the predicate \tit{fraletan} `to forgive' takes dative objects.
@@ -169,14 +167,14 @@ Examples in which the internal case is nominative, the external case is dative a
  \ac{rel}.\ac{pl}.\ac{n}.\ac{dat} -\ac{comp} above be.\ac{pres}.3\ac{pl}\scsub{[nom]} {think about}.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]}\\
  `think about those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-nom}
 
-The two examples in which nominative and dative compete are showed in Table \ref{tbl:summary-gothic-nom-dat}. The light gray marking corresponds to \ref{ex:gothic-nom-dat}, in which the internal dative wins the case competition over the external nominative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-nom}, in which the external dative wins the case competition over the internal nominative, and the relative pronoun surfaces in the dative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the dative compete and the relative pronoun appears in the nominative case.
+The two examples in which the nominative and the dative compete are showed in Table \ref{tbl:summary-gothic-nom-dat}. The light gray marking corresponds to \ref{ex:gothic-nom-dat}, in which the internal dative wins the case competition over the external nominative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-nom}, in which the external dative wins the case competition over the internal nominative, and the relative pronoun surfaces in the dative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the dative compete and the relative pronoun appears in the nominative case.
 
  \begin{table}[H]
   \center
   \caption{Gothic headless relatives (\ac{nom} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
     \toprule
-      \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
+      \diagbox[linecolor=white]{\phantom{xxx}}{\phantom{xxx}}
           & [\ac{nom}]
           & [\ac{acc}]
           & [\ac{dat}]
@@ -201,7 +199,7 @@ The two examples in which nominative and dative compete are showed in Table \ref
     \label{tbl:summary-gothic-nom-dat}
  \end{table}
 
-I end with the competition between dative and accusative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in the dative case and never in accusative.
+I end with the competition between the dative and the accusative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in the dative case and never in the accusative.
 
 Consider the example in \ref{ex:gothic-acc-dat}, in which the internal dative case competes against the external accusative case.
 The internal case is dative, as the preposition \tit{ana} `on' takes dative complements.\footnote{
@@ -230,14 +228,14 @@ Examples in which the internal case is accusative, the external case is dative a
 that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} {send}.\ac{pret}.3\ac{sg}\scsub{[acc]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom}\\
 `that you believe in him whom he sent' \flushfill{Gothic, \ac{john} 6:29}\label{ex:gothic-dat-acc}
 
-The two examples in which accusative and dative compete are showed in Table \ref{tbl:summary-gothic-acc-dat}. The light gray marking corresponds to \ref{ex:gothic-acc-dat}, in which the internal dative wins the case competition over the external accusative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-acc}, in which the external dative wins the case competition over the internal accusative, and the relative pronoun surfaces in the dative case. The instances of *\ac{acc} that appear in the same cells indicate that there are no examples, in which the accusative and the dative compete and the relative pronoun appears in the accusative case.
+The two examples in which the accusative and the dative compete are showed in Table \ref{tbl:summary-gothic-acc-dat}. The light gray marking corresponds to \ref{ex:gothic-acc-dat}, in which the internal dative wins the case competition over the external accusative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-acc}, in which the external dative wins the case competition over the internal accusative, and the relative pronoun surfaces in the dative case. The instances of *\ac{acc} that appear in the same cells indicate that there are no examples, in which the accusative and the dative compete and the relative pronoun appears in the accusative case.
 
  \begin{table}[H]
   \center
   \caption{Gothic headless relatives (\ac{acc} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
     \toprule
-      \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
+      \diagbox[linecolor=white]{\phantom{xxx}}{\phantom{xxx}}
           & [\ac{nom}]
           & [\ac{acc}]
           & [\ac{dat}]
@@ -262,12 +260,10 @@ The two examples in which accusative and dative compete are showed in Table \ref
     \label{tbl:summary-gothic-acc-dat}
  \end{table}
 
-Table \ref{tbl:summary-gothic-acc-dat} can be simplified as Figure \ref{tbl:summary-gothic-simple}. The data can be divided into three set: (1) a set of three unmarked cells in the diagonal from the top left to the bottom right, (2) a set of three light gray marked cells in the lower left corner and (3) a set of three dark gray marked cells in the upper right corner.
-
-The unmarked three cells in the diagonal are situations in which the internal and the external case match. The three cells in the lower left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. The three cells in the upper right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition.
-
-In the three instances in the lower left corner, the relative pronoun appears in the internal case. They correspond to the examples \ref{ex:gothic-nom-acc-rep}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}.
-In the three instances in the upper right corner, the relative pronoun appears in the external case. They correspond to the examples in \ref{ex:gothic-acc-nom-rep}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}.
+Table \ref{tbl:summary-gothic-simple} is a simplified version of Table \ref{tbl:summary-gothic-acc-dat}. The data in the table can be divided into three sets: (1) a set of three unmarked cells in the top-left to bottom-right diagonal, (2) a set of three light gray marked cells in the bottom-left corner and (3) a set of three dark gray marked cells in the top-right corner.
+The unmarked three cells in the diagonal are situations in which the internal and the external case match.
+The three cells in the bottom-left corner, marked in light gray, are the situations in which the internal case surfaces when it wins the competition. In these situations, the relative pronoun appears in the internal case. They correspond to the examples \ref{ex:gothic-nom-acc-rep}, \ref{ex:gothic-nom-dat} and \ref{ex:gothic-acc-dat}.
+The three cells in the top-right corner, marked in dark gray, are the situations in which the external case surfaces when it wins the competition. In these situations, the relative pronoun appears in the external case. They correspond to the examples in \ref{ex:gothic-acc-nom-rep}, \ref{ex:gothic-dat-nom} and \ref{ex:gothic-dat-acc}.
 
 \begin{table}[H]
   \center
@@ -276,12 +272,12 @@ In the three instances in the upper right corner, the relative pronoun appears i
     \label{tbl:summary-gothic-simple}
 \end{table}
 
-To sum up, case competition in headless relative is subject to the case scale, repeated in \ref{ex:case-scale-rep}.
+To sum up, case competition in headless relative is subject to the case scale, repeated from the introduction of this chapter in \ref{ex:case-scale-rep}.
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-rep}
 
-If two cases compete, dative wins over accusative and nominative, and accusative wins over nominative. In this section I gave examples from Gothic that illustrate this. As I mentioned in the introduction of this section, this case scale is not specific for Gothic, but it holds across languages (cf. see \citealt{pittner1995} for Modern, Middle High and Old High German and \citealt{grosu2003,kakarikos2014} for Ancient Greek).\footnote{
-Some of these languages differ from Gothic in that they are subject to an additional constraint. That is, they not allow both the internal or the external case to win case competitions. If the other case is more to the right on the case scale \ref{ex:case-scale-rep}, the result is ungrammatical. Modern German is an example of a language that only allows the internal case to win the case competition. If the external case is more to the right on the case scale, the headless relative is ungrammatical.
+If two cases compete, the dative wins over the accusative and the nominative, and the accusative wins over the nominative. In this section I gave examples from Gothic that illustrate this. As I mentioned in the introduction of this section, this case scale is not specific for Gothic, but it holds across languages (cf. see \citealt{pittner1995} for Modern and Old High German and \citealt{grosu2003,kakarikos2014} for Ancient Greek).\footnote{
+Modern German differs from Gothic and the other languages in that it is subject to an additional constraint. That is, it does not allow the internal and the external case to win case competitions. Modern German only allows the internal case to do so. If the external case is more to the right on the case scale, the headless relative is ungrammatical.
 This topic is the main focus of Part \ref{part:variation} of this dissertation.}
 
 In the remainder of this chapter I show that headless relatives are not the only place where the case scale appears. Instead, it appears with more syntactic phenomena. Moreover, exactly this scale is also reflected in morphology.
@@ -441,7 +437,7 @@ In ergative-absolutive languages, the alignment is different. The subject of an 
 
 Note here that nominative-accusative languages use the same case marking for the same grammatical function (nominative for subjects, accusative for objects), but ergative-absolutive languages do not (absolutive for objects in transitive clauses or subjects in intransitive clauses, ergative for subjects in transitive clauses).
 
-\citet{bobaljik2006} describes how absolutives and ergatives behave with respect to whether they show agreement. There are languages that show agreement with both absolutives and ergatives. There are also languages that show only agreement with absolutives. Crucially, there is no language that shows only agreement with ergatives. Absolutives are a heterogenous set with respect to grammatical function, i.e. they are subjects of intransitive verbs and objects of transitive verbs. However, with respect to showing agreement absolutives behave the same, and this behavior is different from ergatives. This indicates that it is morphological case and not grammatical function that is the decisive factor.
+\citet{bobaljik2006} describes how absolutives and ergatives behave with respect to whether they show agreement. There are languages that show agreement with both absolutives and ergatives. There are also languages that show only agreement with absolutives. Crucially, there is no language that shows only agreement with ergatives. Absolutives are a heterogenous set with respect to grammatical function, i.e. They are subjects of intransitive verbs and objects of transitive verbs. However, with respect to showing agreement absolutives behave the same, and this behavior is different from ergatives. This indicates that it is morphological case and not grammatical function that is the decisive factor.
 
 \citeauthor{bobaljik2006} (following \citealt{marantz2000}) combines nominative-accusative and ergative-absolutive languages in the following way: accusative and ergative are dependent cases, and nominative or absolutive are unmarked case. Reformulating Figure \ref{fig:agr-sub-do-io-lang} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-def-dep-dat}.
 
