--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -593,3 +593,10 @@
   year={1987},
   publisher={Walter de Gruyter, Berlin/New York}
 }
+
+@inproceedings{citko2013,
+  title={Size matters: Multidominance and DP structure in Polish},
+  author={Citko, Barbara},
+  booktitle={Talk at the th Poznan Linguistic Meeting},
+  year={2013}
+}
