--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -1061,7 +1061,7 @@ label={below left:\tit{e:l}}]{};
 The lexical entry in \ref{ex:khanty-el-lexicon} can only match the syntactic structure if \ac{nom}P moves away, leaving the \ac{acc}P containing \ac{f}2 behind. In other words, the syntactic structure needs to be modified in such a way that the complement of \ac{f}2 is not in the way anymore.
 
 Exactly this movement is one of the two so-called `evacuation movements' that is part of the spellout procedure in Nanosyntax.\footnote{
-In Chapter \ref{ch:deletion} I introduce the spellout procedure in more detail.
+In Chapter \ref{ch:relativization} I introduce the spellout procedure in more detail.
 } I showed in Section \ref{sec:syncretism} that lexical entries are matched using the Superset Principle and the Elsewhere Condition. If there is no match in the lexicon for a particular syntactic structure, two types of (evacuation) movement can take place, in a fixed order.\footnote{
 The two types of movement are cyclic movement and snowball movement, also used to derive the possible orders in \tsc{Dem} > \tsc{Num} > \tsc{Adj} > \tsc{N} \citep{cinque2005}.}
 The movement types change the syntactic structure in such a way that they generate new constituents that are possible matches for spellout.\footnote{
