--- a/committee.tex
+++ b/committee.tex
@@ -12,9 +12,9 @@ A similar avenue was pursued by \citealt{himmelreich2017}. She specific language
 
 The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Like I briefly mentioned in Chapter \ref{ch:decomposition}, Nanosyntax models crosslinguistic variation as differences in the lexicon, how the features are packaged together differently. That means that I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. Specifically, I derive the different behaviors from relative pronouns and the external head that I introduce in this chapter.
 
-In Section \ref{sec:internal-wins} I discuss the situation in which the internal case wins the competition and the relative pronoun surfaces in the internal case. This situation is attested in all languages with case competition: the internal-only ones, such as Modern German, and the internal-and-external ones, such as Gothic and Old High German.
+In Section  I discuss the situation in which the internal case wins the competition and the relative pronoun surfaces in the internal case. This situation is attested in all languages with case competition: the internal-only ones, such as Modern German, and the internal-and-external ones, such as Gothic and Old High German.
 
-In Section \ref{sec:external-wins} I discuss the situation in which the external case wins the case competition and the relative pronoun surfaces in the external case. This situation is not attested in all of the case competition languages. This situation arises if the external head contains all case features of the internal head. In addition, and this is what distinguishes the internal-and-external languages from the internal-only languages, the features of the relative pronoun are a subset of the features of the external head. So, \tit{em} cannot delete \tit{wen}, but \tit{dem} can delete \tit{den}.
+In Section I discuss the situation in which the external case wins the case competition and the relative pronoun surfaces in the external case. This situation is not attested in all of the case competition languages. This situation arises if the external head contains all case features of the internal head. In addition, and this is what distinguishes the internal-and-external languages from the internal-only languages, the features of the relative pronoun are a subset of the features of the external head. So, \tit{em} cannot delete \tit{wen}, but \tit{dem} can delete \tit{den}.
 
 From these two proposals follows that it is impossible to have third pattern, which is indeed also not attested. When the external case wins over the internal one, there is a situation in which the external case could delete the internal one. So, it is impossible to have the second option but not the first one.
 
@@ -35,7 +35,7 @@ you can see this very very well in modern german: it does not suffice to let the
 
 
 
-The relative pronoun in Modern German headless relatives is sensitive to both the internal and the external case. Consider the examples in \ref{ex:mg-internal}. In both sentences, the internal case is accusative, because the predicate in the relative clause \tit{mögen} `to like' takes accusative objects. The external case differs between the two sentences. In \ref{ex:mg-dat-acc-wen} the external case is dative, because the predicate \tit{vertrauen} `to trust' takes dative objects.  In \ref{ex:mg-int}, the external case is nominative, because \tit{besuchen} `to visit' takes nominative subjects.
+The relative pronoun in Modern German headless relatives is sensitive to both the internal and the external case. Consider the examples in \ref{ex:mg-internal}. In both sentences, the internal case is accusative, because the predicate in the relative clause \tit{mögen} `to like' takes accusative objects. The external case differs between the two sentences. In \ref{ex:mg-dat-acc-wen} the external case is dative, because the predicate \tit{vertrauen} `to trust' takes dative objects.  In xx the external case is nominative, because \tit{besuchen} `to visit' takes nominative subjects.
 
 \ex.\label{ex:mg-internal}
 \ag. *Ich vertraue wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
@@ -45,9 +45,9 @@ I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\a
  we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
  `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-int-rep}
 
-The sentence in \ref{ex:mg-dat-acc-wen} is ungrammatical, and the one in \ref{ex:mg-int} is not. The internal case cannot be the source of ungrammaticality, because the relative clauses are identical regarding case, i.e. they both take accusative. The external case differs, however. In Chapter X I showed that headless relatives in Modern German are (just like e.g. Gothic) sensitive to the case scale: \tsc{nom} < \tsc{acc} < \tsc{dat}.
+The sentence in \ref{ex:mg-dat-acc-wen} is ungrammatical, and the one in xxx is not. The internal case cannot be the source of ungrammaticality, because the relative clauses are identical regarding case, i.e. they both take accusative. The external case differs, however. In Chapter X I showed that headless relatives in Modern German are (just like e.g. Gothic) sensitive to the case scale: \tsc{nom} < \tsc{acc} < \tsc{dat}.
 
-\ref{ex:mg-dat-acc-wen} is grammatical, because the internal accusative case wins over the external nominative. \ref{ex:mg-int} is ungrammatical, because the internal accusative case cannot win the case competition over the external dative. It can be concluded that the relative pronoun in Modern German headless relatives cares about both the internal and the external case.
+\ref{ex:mg-dat-acc-wen} is grammatical, because the internal accusative case wins over the external nominative. xx is ungrammatical, because the internal accusative case cannot win the case competition over the external dative. It can be concluded that the relative pronoun in Modern German headless relatives cares about both the internal and the external case.
 
 In sum, even though the relative pronoun in Modern German headless relatives is always part of the relative clause, the relative pronoun also takes the external case into account. That means that the relative pronoun needs to have access to the main clause case. I propose that this can be achieved by introducing an external head to the relative clause. In Section X I show how this solves the issue.
 
